Add first CSS header sketch

--- a/main.html
+++ b/main.html
@@ -18,13 +18,13 @@
             </ul>
         </div>
         <div class="inf">
-                <div>
+                <div id="left-inf">
                     <h1 class="bold">This website is awesome</h1>
                     <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
                     <button>Sign Up</button>
                 </div>
-                <div>
-                    <img>
+                <div id="right-inf">
+                    <p>this is a placeholder for an image</p>
                 </div>
         </div>
     </div>
