Finish first div

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
     <div class="header">
         <div class="sup">
-            <p class="bold">Header Logo</p>
+            <p class="logo bold">Header Logo</p>
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
         </div>
         <div class="inf">
                 <div id="left-inf">
-                    <h1 class="bold">This website is awesome</h1>
-                    <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
-                    <button>Sign Up</button>
+                    <h1 class="main">This website is awesome</h1>
+                    <p class="secondary">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
+                    <button class="blue-button">Sign Up</button>
                 </div>
                 <div id="right-inf">
                     <p>this is a placeholder for an image</p>
