--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 </div>
         </div>
     </div>
-    <div class="random">
-        <h2 class="bold">Some random information</h2>
-        <div>
+    <div class="information">
+        <h2 class="information-header">Some random information</h2>
+        <div class="imgs">
             <div class="img-text">
                 <img>
                 <p>this is some subtext under and illustration or image</p>
