--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="quote">
         <blockquote>
-            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         </blockquote>
-        <p class="bold">Leonardo DaVinci</p>
+        <div class="autor">
+            <p class="bold">-Leonardo DaVinci</p>
+        </div>
     </div>
     <div>
         <div>
