Finish CSS last section with content

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
             <p class="bold">-Leonardo DaVinci</p>
         </div>
     </div>
-    <div>
-        <div>
-            <div>
+    <div class="announce">
+        <div class="announcement" >
+            <div class="announces">
                 <h2 class="bold">Call to action! It's time!</h2>
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>
             <div>
-                <button type="submit">Sign Up</button>
+                <button class="blue-button" type="submit">Sign Up</button>
             </div>
         </div>        
     </div>
