--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>        
     </div>
     <div class="footer">
-        <p>Copyright David Tellez</p>
+        <p>Copyright David Tellez &#169; First version LandPage</p>
     </div>
 </body>
 </html>
